Fixed body paddings and button letter spacing

--- a/sass/button.scss
+++ b/sass/button.scss
@@ -12,7 +12,7 @@
         @extend .btn;
         padding: 10px 20px;
         font-size: 0.8rem;
-        letter-spacing: 0.15rem;
+        letter-spacing: 0.10rem;
     }
 
     &-big {
