--- a/sass/grid.scss
+++ b/sass/grid.scss
@@ -1,7 +1,7 @@
 .container {
     max-width: $page-width;
     margin: 0 auto;
-    padding: 0 30px;
+    padding: 0 15px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
